Terrafrom/0.5.VPC.tf
resource "aws_vpc" "admin_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = "true"
  tags = {
    Name="admin_vpc"
  }
}
