Terrafrom/3.1.EKS_Subnets.tf
resource "aws_subnet" "EKS_1thprivate" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = var.subnet_tags
}
 
#####################################################
resource "aws_subnet" "EKS_2thprivate" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = var.subnet_tags
}

########################################################
resource "aws_subnet" "EKS_1thpub" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = var.subnet_tags
}
#########################################################
resource "aws_subnet" "EKS_2thpub" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = var.subnet_tags
}
