Terrafrom/5.1.elb.secgroup.tf
resource "aws_security_group" "elb_sg" {
  name   = var.security_group_name
  vpc_id = var.vpc_id

  # Add additional configuration as needed
}
 

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "ELB Security Group"
  }
}
